Fixed navbar gap

--- a/style.css
+++ b/style.css
@@ -98,7 +98,6 @@
 .brand {
     background-color: rgb(33, 37, 41);
     padding: 10px;
-    font-family: sans-serif;
 }
 
 .btn {
@@ -106,11 +105,17 @@
     text-decoration: none;
     padding: 10px;
     border: 1px solid black;
-    border-radius: 10px;
+    border-radius: 0.25rem;
+    height: 40px;
+    width: 87px;
 }
 
 .btn:hover {
     opacity: 0.8;
+}
+
+.buttons {
+    padding: 2px;
 }
 
 .cv {
@@ -157,7 +162,12 @@
 .navbar-contents {
     background-color: rgb(33, 37, 41);
     padding: 10px;
-    font-family: sans-serif;
+}
+
+.projects-title {
+    font-size: 35px;
+    font-weight: 400;
+    text-align: center;
 }
 
 .py-5 {
@@ -165,9 +175,12 @@
     padding-bottom: 3rem !important;
 }
 
+.self-portrait {
+    border-radius: 0.25rem;
+}
+
 .text-center {
     text-align: center !important;
-    font-family: sans-serif;
     font-size: larger;
 }
 
@@ -185,6 +198,13 @@
 
 h4 {
     font-size: 1.5rem;
+}
+
+header,
+main {
+    font-family: monospace;
+    font-style: normal;
+    font-weight: 400;
 }
 
 @media only screen and (max-width: 768px) {
